--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "homepage": "https://github.com/d-hardine/messaging-app-back#readme",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
